[project]
name = "neuron_explainer"
version = "0.0.2"
description = "OpenAI's implementation of automated-interpretability, with some updates. Not officially affiliated with OpenAI."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "httpx==0.27.0",
    "tiktoken==0.6.0",
    "scikit-learn==1.4.2",
    "boostedblob==0.15.3",
    "blobfile==2.1.1",
    "numpy==1.26.4",
    "pytest==8.1.2",
    "orjson==3.10.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["neuron_explainer", "neuron_explainer.explanations", "neuron_explainer.activations", "neuron_explainer.fast_dataclasses"]
